--- a/css/Contenedor.css
+++ b/css/Contenedor.css
@@ -61,6 +61,7 @@
     border-radius: 5px;
     border: 1px solid black;
     text-decoration: none;
+    font-size: 15px;
 }
 
 .btn-contenedor:hover{
@@ -75,9 +76,8 @@
     margin-top: -60px;
 }
 
-.columnaP img{
-    width: 50%;
-    border-radius: 5px;
+.imagen{
+    border-radius: 10px;
 }
 
 .botones{
